--- a/RL_Assignment_09.ipynb
+++ b/RL_Assignment_09.ipynb
@@ -92,85 +92,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "y3mEsH2k4ayP",
-        "outputId": "e5ddd4e9-7d8c-4c4d-8e02-a081d8060f89",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 968
-        }
+        "id": "y3mEsH2k4ayP"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting numpy==1.23.5\n",
-            "  Downloading numpy-1.23.5-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.3 kB)\n",
-            "Collecting matplotlib==3.7.0\n",
-            "  Downloading matplotlib-3.7.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.6 kB)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (1.3.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (4.58.4)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (1.4.8)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (24.2)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (11.2.1)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.0) (2.9.0.post0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib==3.7.0) (1.17.0)\n",
-            "Downloading numpy-1.23.5-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.1/17.1 MB\u001b[0m \u001b[31m110.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading matplotlib-3.7.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.6/11.6 MB\u001b[0m \u001b[31m113.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: numpy, matplotlib\n",
-            "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 2.0.2\n",
-            "    Uninstalling numpy-2.0.2:\n",
-            "      Successfully uninstalled numpy-2.0.2\n",
-            "  Attempting uninstall: matplotlib\n",
-            "    Found existing installation: matplotlib 3.10.0\n",
-            "    Uninstalling matplotlib-3.10.0:\n",
-            "      Successfully uninstalled matplotlib-3.10.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "jaxlib 0.5.1 requires numpy>=1.25, but you have numpy 1.23.5 which is incompatible.\n",
-            "imbalanced-learn 0.13.0 requires numpy<3,>=1.24.3, but you have numpy 1.23.5 which is incompatible.\n",
-            "thinc 8.3.6 requires numpy<3.0.0,>=2.0.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "chex 0.1.89 requires numpy>=1.24.1, but you have numpy 1.23.5 which is incompatible.\n",
-            "db-dtypes 1.4.3 requires numpy>=1.24.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "pymc 5.23.0 requires numpy>=1.25.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "tensorflow 2.18.0 requires numpy<2.1.0,>=1.26.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "scikit-image 0.25.2 requires numpy>=1.24, but you have numpy 1.23.5 which is incompatible.\n",
-            "blosc2 3.4.0 requires numpy>=1.26, but you have numpy 1.23.5 which is incompatible.\n",
-            "xarray-einstats 0.9.0 requires numpy>=1.25, but you have numpy 1.23.5 which is incompatible.\n",
-            "treescope 0.1.9 requires numpy>=1.25.2, but you have numpy 1.23.5 which is incompatible.\n",
-            "xarray 2025.3.1 requires numpy>=1.24, but you have numpy 1.23.5 which is incompatible.\n",
-            "albucore 0.0.24 requires numpy>=1.24.4, but you have numpy 1.23.5 which is incompatible.\n",
-            "plotnine 0.14.5 requires matplotlib>=3.8.0, but you have matplotlib 3.7.0 which is incompatible.\n",
-            "bigframes 2.6.0 requires matplotlib>=3.7.1, but you have matplotlib 3.7.0 which is incompatible.\n",
-            "bigframes 2.6.0 requires numpy>=1.24.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "jax 0.5.2 requires numpy>=1.25, but you have numpy 1.23.5 which is incompatible.\n",
-            "albumentations 2.0.8 requires numpy>=1.24.4, but you have numpy 1.23.5 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed matplotlib-3.7.0 numpy-1.23.5\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "matplotlib",
-                  "mpl_toolkits",
-                  "numpy"
-                ]
-              },
-              "id": "e804e89fdccb459c922741e931938715"
-            }
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "source": [
         "!apt-get -qq install xvfb x11-utils &> /dev/null\n",
         "!pip install ufal.pybox2d --quiet &> /dev/null\n",
@@ -235,31 +161,10 @@
         "    return tuple([np.digitize(state[i], bins[i]) - 1 for i in range(ENV_STATE_DIM)])"
       ],
       "metadata": {
-        "id": "uIGwINd94w1D",
-        "outputId": "aecda0f5-06b1-4955-cc05-14cee9f650cf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "uIGwINd94w1D"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/moviepy/config_defaults.py:1: DeprecationWarning: invalid escape sequence '\\P'\n",
-            "  \"\"\"\n",
-            "/usr/local/lib/python3.11/dist-packages/moviepy/video/io/ffmpeg_reader.py:294: DeprecationWarning: invalid escape sequence '\\d'\n",
-            "  lines_video = [l for l in lines if ' Video: ' in l and re.search('\\d+x\\d+', l)]\n",
-            "WARNING:py.warnings:/usr/local/lib/python3.11/dist-packages/moviepy/video/fx/painting.py:7: DeprecationWarning: Please import `sobel` from the `scipy.ndimage` namespace; the `scipy.ndimage.filters` namespace is deprecated and will be removed in SciPy 2.0.0.\n",
-            "  from scipy.ndimage.filters import sobel\n",
-            "\n",
-            "WARNING:py.warnings:/usr/local/lib/python3.11/dist-packages/moviepy/video/io/sliders.py:61: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "  if event.key is 'enter':\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -540,7 +445,7 @@
       "metadata": {
         "id": "0s_C16B6DEQm"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -563,41 +468,52 @@
       "source": [
         "# Your code can go here\n",
         "\n",
-        "mu_E = feature_expectation(pi_expert)\n",
-        "mu_list = []\n",
-        "w_list = []\n",
-        "t_list = []\n",
-        "Q0, _ = rl_algorithm()\n",
-        "mu_0 = feature_expectation(Q0)\n",
-        "mu_list.append(mu_0)\n",
+        "def projection_IRL(epsilon=0.05, max_iter=20, gamma=0.9):\n",
+        "    mu_E = feature_expectation(pi_expert, gamma=gamma)\n",
+        "    mu_list = []\n",
+        "    t_list = []\n",
+        "    w_list = []\n",
+        "    Q_list = []\n",
+        "    returns_list = []\n",
+        "    Q0, returns0 = rl_algorithm(w=None)\n",
+        "    mu_0 = feature_expectation(Q0, gamma=gamma)\n",
+        "    mu_list.append(mu_0)\n",
+        "    t_list.append(mu_0)\n",
+        "    w1 = mu_E - mu_0\n",
+        "    w1 /= np.linalg.norm(w1)\n",
+        "    w_list.append(w1)\n",
+        "    Q_list.append(Q0)\n",
+        "    returns_list.append(np.mean(returns0[-100:]))\n",
         "\n",
-        "w = mu_E - mu_0\n",
-        "w_list.append(w)\n",
-        "t_list.append(mu_0)\n",
+        "    for i in range(1, max_iter):\n",
+        "        w = mu_E - t_list[-1]\n",
+        "        w /= np.linalg.norm(w)\n",
+        "        w_list.append(w)\n",
+        "        Q, returns = rl_algorithm(w=w, gamma=gamma)\n",
+        "        mu_i = feature_expectation(Q, gamma=gamma)\n",
+        "        mu_list.append(mu_i)\n",
+        "        Q_list.append(Q)\n",
+        "        returns_list.append(np.mean(returns[-100:]))\n",
+        "        delta = mu_i - t_list[-1]\n",
+        "        numerator = np.dot((mu_E - t_list[-1]).T, delta)\n",
+        "        denominator = np.dot(delta.T, delta)\n",
+        "        coeff = numerator / denominator\n",
+        "        t_i = t_list[-1] + coeff * delta\n",
+        "        t_list.append(t_i)\n",
+        "    return Q_list, returns_list\n",
         "\n",
-        "for i in range(1, max_iter):\n",
-        "    w = mu_E - t_list[-1]\n",
-        "    w = w / np.linalg.norm(w)\n",
-        "    w_list.append(w)\n",
-        "\n",
-        "    Q, _ = rl_algorithm(w=w)\n",
-        "    mu_i = feature_expectation(Q)\n",
-        "    mu_list.append(mu_i)\n",
-        "\n",
-        "    mu_diff = mu_i - t_list[-1]\n",
-        "    delta = mu_E - t_list[-1]\n",
-        "    coeff = np.dot(delta.T, mu_diff) / np.dot(mu_diff.T, mu_diff)\n",
-        "    t_new = t_list[-1] + coeff * mu_diff\n",
-        "    t_list.append(t_new)\n",
-        "\n",
-        "    if np.linalg.norm(mu_E - mu_i) < ε:\n",
-        "        print(f\"converge at {i} \")\n",
-        "        break\n"
+        "def plot_learning_curve(returns_list):\n",
+        "    plt.plot(returns_list, marker='o')\n",
+        "    plt.title(\"Apprentice Policy Learning Curve\")\n",
+        "    plt.xlabel(\"Iteration\")\n",
+        "    plt.ylabel(\"Average Return (Last 100 Episodes)\")\n",
+        "    plt.grid(True)\n",
+        "    plt.show()"
       ],
       "metadata": {
         "id": "Bi75TDKD3AYw"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
